# Plant-Phenotyper

./: CMakeLists.txt  README.md  package.xml
doc/: 99-usb-serial.rules  IPs  commands
src/bags/: launch_bag.launch  launch_bag_tf_all.launch  launch_bag_tf_gps.launch
src/camera/: common_camera_parameters.launch  realsense_imu_filter.launch  rs_camera_rtabmap.launch  rs_camera_rtabmap_imu.launch  rs_d435.launch  rs_d435i.launch  rs_imu_filter.launch  rs_t265.launch
src/data_analysis/: CMakeLists.txt  data_analysis.cpp  passthrough.cpp  segmentation (backup).cpp  segmentation.cpp
src/data_analysis/pcl/ml/include/pcl/ml/: kmeans.h
src/data_analysis/pcl/ml/src/: kmeans.cpp
src/gps/: nmea_serial_driver_rtabmap.launch
src/ldmrs/: sick_ldmrs_rtabmap.launch
src/lms100/: LMS1xx_rtabmap.launch
src/nucleo_imu/: driver_imu_rtabmap.launch  imu_params.yaml  nucleo_filter.launch
src/post-processing/: assemble_scans_node.cpp  laser_assembler.launch
src/recording/: record.launch
src/robot_localization/: ekf_template_rtabmap.yaml  gps_robot_localization.launch  imu_gps_robot_localization.launch  imu_robot_localization.launch  only_odom_robot_localization.launch
src/rtabmap/: common_parameters(backup).launch  common_parameters.launch  rtabmap_main(backup).launch  rtabmap_main.launch  test_d435.launch  test_d435_imu.launch  test_d435_imu_okvis.launch  test_d435_ldmrs.launch  test_d435_lms100.launch  test_d435_lms100_gps.launch  test_d435_lms100_imu.launch  test_d435_lms100_imu_gps.launch  test_icp_odometry.launch
